@@ -1,3 +1,9 @@
+2003-07-07  Donal K. Fellows  <fellowsd@cs.man.ac.uk>
+
+	* generic/tkImage.c (TkDeleteAllImages,etc.): Stopped the deleting
+	of hash entries from a table that has just been deleted by this
+	function when some images are Tcl_Preserve()d...  [Bug 749353]
+
 2003-07-03  Jim Ingham <jingham@apple.com>
 
 	* macosx/tkMacOSXColor.c (GetControlPartColor): Use
